--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Under Development</title>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/icon" href="/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="/favicon.ico" rel="icon">
+        <title>anon's basement</title>
+        <meta property="og:title" content="anon's basement"/>
+        <meta property="og:image" content="/favicon.ico" />
+        <meta name="theme-color" content="#2b2d31" />
+        <meta property="og:description" content="all that you need to know about anon's basement..." />
+      </head>
+<title>Uh oh!</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,700">
 <link rel="stylesheet" href="style.css">
 </head>
