--- a/index.html
+++ b/index.html
@@ -1,5 +1,81 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <head>
+      <meta charset="UTF-8" />
+      <link rel="icon" type="image/icon" href="/favicon.ico" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link href="/favicon.ico" rel="icon" />
+      <title>anon's basement</title>
+      <meta property="og:title" content="anon's basement" />
+      <meta property="og:image" content="/favicon.ico" />
+      <meta name="theme-color" content="#2b2d31" />
+      <meta
+        property="og:description"
+        content="all that you need to know about anon's basement..."
+      />
+    </head>
+    <title>Uh oh!</title>
+    <style>
+      .link-button {
+        display: inline-block;
+        padding: 10px 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        text-decoration: none;
+        font-size: 16px;
+        margin: 5px;
+        text-align: center;
+      }
+      .link-button:hover {
+        background-color: #eee;
+      }
+      .link-button i {
+        margin-right: 5px;
+      }
+      /* Add styles for specific platforms based on their icon class */
+    </style>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Poppins:400,700"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+  </head>
+
+  <body>
+    <div class="container">
+      <h1>This site is under development</h1>
+      <p>We're brewing something special. Check back soon for the launch!</p>
+      <!-- <a href="#"></a> -->
+      <h3>Stay in the loop by contacting me...</h3>
+      <a href="mailto:hi@anonsv5.me" class="link-button"
+      ><i class="fa-solid fa-envelope"></i> Email</a
+    >
+      <a href="https://discord.com/users/834888738919153684" class="link-button"
+        ><i class="fab fa-discord"></i> Discord</a
+      >
+      <a href="https://github.com/svlord5" class="link-button"
+        ><i class="fab fa-github"></i> Github</a
+      >
+            <a href="https://anonsv5.me/donate" class="link-button"
+        ><i class="fa-solid fa-hand-holding-dollar"></i> Donate</a
+      >
+      <a href="https://twitter.com/sv_lord5" class="link-button"
+      ><i class="fa-brands fa-twitter"></i> Twitter (currently X)</a
+    >
+    </div>
+  </body>
+</html>
+<!-- <!DOCTYPE html>
+<html>
 <head>
     <head>
         <meta charset="UTF-8" />
@@ -23,4 +99,4 @@
     <a href="https://github.com/svlord5" target="_blank">Stay in the loop</a>
   </div>
 </body>
-</html>
+</html> -->
