--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
   <div class="container">
     <h1>This site is under development</h1>
-    <p>We're brewing something special. Check back soon for the launch!</p>
+    <p>Cooking something special. Check back soon for the launch!</p>
     <!-- <a href="#"></a> -->
     <h3>Stay in the loop by contacting me...</h3>
     <a href="mailto:hi@anonsv5.me" class="link-button"><i class="fa-solid fa-envelope"></i> Email</a>
