--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <a href="https://roblox.com/users/1550322092/profile" class="link-button"><i class="fa-solid fa-arrow-up-right-from-square"></i> Roblox</a>
     <a href="https://twitter.com/sv_lord5" class="link-button"><i class="fa-brands fa-twitter"></i> Twitter (currently
       X)</a>
-      <h5>*responses might be delayed</h5>
+      <h5><i>*responses might be delayed</i></h5>
   </div>
 </body>
 
